--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -2,75 +2,4 @@
 @import "~bulma/sass/utilities/initial-variables";
 @import "variables";
 @import "~bulma/bulma";
-
-html,
-body {
-  height: 100%;
-}
-
-body {
-  background-color: #f6f7eb;
-}
-
-.main {
-  padding-top: 30px;
-}
-
-.panel {
-  background-color: $white;
-}
-
-.list-item {
-  width: 100%;
-  display: flex;
-}
-
-.counter-container {
-  margin: 1em;
-  @media screen and (min-width: 768px) {
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 500px;
-  }
-  .title-container {
-    display: flex;
-    align-items: center;
-  }
-  .title {
-    margin-left: .75em;
-    font-size: 1em;
-    font-weight: normal;
-  }
-}
-
-.counter-form {
-  width: 100%;
-  .input-control {
-    flex-grow: 1;
-  }
-  .button-add-container {
-    width: 36px;
-  }
-}
-
-.button {
-  &.is-round {
-    border-radius: $radius-rounded;
-  }
-}
-.iterator-control-container:last-child {
-  margin-left: .75em;
-}
-.iterator-control {
-  .up .button {
-    z-index: 3;
-  }
-  .count {
-    width: 50px;
-    text-align: center;
-    line-height: 2.0;
-    background: #fff;
-    border-top: 1px solid $dark;
-    border-bottom: 1px solid $dark;
-  }
-}
+@import "custom";
